<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/display_scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ContentItemDispFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/display_resistBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/display_itemNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/item_name_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/display_itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:hint="@string/item_hint"
                    android:inputType="text"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_itemNameText" />

                <TextView
                    android:id="@+id/display_empireDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/empire_date_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_itemName" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/display_empireYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:hint="@string/year_hint"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLength="4"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/display_empireDateText" />

                    <TextView
                        android:id="@+id/display_dateSlash_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="@id/display_empireYear"
                        app:layout_constraintStart_toEndOf="@id/display_empireYear" />

                    <EditText
                        android:id="@+id/display_empireMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:hint="@string/month_hint"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLength="2"
                        android:textSize="25sp"
                        app:layout_constraintStart_toEndOf="@id/display_dateSlash_1"
                        app:layout_constraintTop_toBottomOf="@id/display_empireDateText" />

                    <TextView
                        android:id="@+id/display_dateSlash_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="@id/display_empireMonth"
                        app:layout_constraintStart_toEndOf="@id/display_empireMonth" />

                    <EditText
                        android:id="@+id/display_empireDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:hint="@string/date_hint"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLength="2"
                        android:textSize="25sp"
                        app:layout_constraintStart_toEndOf="@id/display_dateSlash_2"
                        app:layout_constraintTop_toBottomOf="@id/display_empireDateText" />

                </LinearLayout>

                <Button
                    android:id="@+id/display_datePickBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/menu_button"
                    android:padding="10dp"
                    android:text="@string/date_picker"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_empireYear" />

                <TextView
                    android:id="@+id/display_genreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/genre_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_datePickBtn" />

                <Spinner
                    android:id="@+id/display_genreSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:entries="@array/genre_list"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_genreText" />

                <TextView
                    android:id="@+id/display_doorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/door"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_genreSpinner" />

                <Spinner
                    android:id="@+id/display_door"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_doorText" />

                <TextView
                    android:id="@+id/display_remainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/remain_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_door" />

                <SeekBar
                    android:id="@+id/display_remainSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:background="#ccc"
                    android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_remainText" />

                <TextView
                    android:id="@+id/disp_memoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/memo_text"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_remainSeekBar" />

                <EditText
                    android:id="@+id/display_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:hint="@string/memo_hint"
                    android:inputType="textMultiLine"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/disp_memoText" />

                <Button
                    android:id="@+id/display_resistBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/menu_button"
                    android:text="@string/btn_registerItem"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@id/display_backBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/display_memo" />

                <Button
                    android:id="@+id/display_backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/menu_button"
                    android:text="@string/back_btn"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/display_scroll"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </ScrollView>
